export enum SeatClass {
  Economy,
  Business
}
