export enum PaymentStatus {
  Pending,
  Payed,
  Refunded
}
